--- a/emu.html
+++ b/emu.html
@@ -9,19 +9,20 @@
   <table>
    <tr><th valign="top"><img src="/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
    <tr><th colspan="5"><hr></th></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mesen-win.zip/">Mesen Windows/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mesen-lin.zip/">Mesen Linux/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mesen-mac1.zip/">Mesen macOS (Apple Silicon)/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mesen-mac2.zip/">Mesen macOS (Intel)/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="bsnes-win.zip/">bsnes Windows/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="bsnes-lin.zip/">bsnes Linux/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="bsnes-mac.zip/">bsnes macOS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mgba/">mGBA Windows/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mgba/">mGBA Linux (64-bit)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mgba/">mGBA Linux (ARM64)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="mgba/">mGBA macOS/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="pj64/">Project64/</a></td><td align="right">2025-09-10 21:36  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="1.12-WASM/">1.12-WASM/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mesen-win.zip/">Mesen Windows/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mesen-lin.zip/">Mesen Linux/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mesen-mac1.zip/">Mesen macOS (Apple Silicon)/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mesen-mac2.zip/">Mesen macOS (Intel)/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/bsnes-win.zip/">bsnes Windows/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/bsnes-lin.zip/">bsnes Linux/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/bsnes-mac.zip/">bsnes macOS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mgba-win.zip/">mGBA Windows/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mgba-lin1.zip/">mGBA Linux (64-bit)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mgba-lin2.zip/">mGBA Linux (ARM64)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/mgba-mac.zip/">mGBA macOS/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/pj64-win.zip/">Project64 Windows/</a></td><td align="right">2025-09-10 21:36  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/desmume-win.zip/">DeSmuME Windows/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="files/emu/desmume-mac.zip/">DeSmuME macOS/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
    <tr><th colspan="5"><hr></th></tr>
 </table>
 </body></html>
