--- a/roms.html
+++ b/roms.html
@@ -9,12 +9,12 @@
   <table>
    <tr><th valign="top"><img src="/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
    <tr><th colspan="5"><hr></th></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/nes.zip/">NES/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/snes.zip/">SNES/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/gb.zip/">Game Boy/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/gbc.zip/">Game Boy Colour/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/n64.zip/">Nintendo 64/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/ds.zip/">Nintendo DS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/nes/nes.html/">NES/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/snes/snes.html/">SNES/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/gb/gb.html/">Game Boy/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/gbc/gbc.html/">Game Boy Colour/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/n64/n64.html/">Nintendo 64/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms/ds/ds.html/">Nintendo DS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
    <tr><th colspan="5"><hr></th></tr>
 </table>
 </body></html>
