--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
  <body>
 <h1>Index of /</h1>
   <table>
-   <tr><th valign="top"><img src="/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
+   <tr><th valign="top"><img src="/Files/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
    <tr><th colspan="5"><hr></th></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu.html/">Emu/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="roms.html/">ROMS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-    <tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="random.html/">Random/</a></td><td align="right">2025-09-10 19:23  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="emu.html/">Emu/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="roms.html/">ROMS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+    <tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="random.html/">Random/</a></td><td align="right">2025-09-10 19:23  </td><td align="right">  - </td><td>&nbsp;</td></tr>
    <tr><th colspan="5"><hr></th></tr>
 </table>
 </body></html>
