--- a/emu.html
+++ b/emu.html
@@ -2,27 +2,27 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
  <head>
-  <title>Index of /Emu</title>
+  <title>Index of //Files/emu</title>
  </head>
  <body>
 <h1>Index of /Emu</h1>
   <table>
-   <tr><th valign="top"><img src="/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
+   <tr><th valign="top"><img src="/Files/Files/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
    <tr><th colspan="5"><hr></th></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mesen-win.zip/">Mesen Windows/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mesen-lin.zip/">Mesen Linux/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mesen-mac1.zip/">Mesen macOS (Apple Silicon)/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mesen-mac2.zip/">Mesen macOS (Intel)/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/bsnes-win.zip/">bsnes Windows/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/bsnes-lin.zip/">bsnes Linux/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/bsnes-mac.zip/">bsnes macOS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mgba-win.zip/">mGBA Windows/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mgba-lin1.zip/">mGBA Linux (64-bit)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mgba-lin2.zip/">mGBA Linux (ARM64)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/mgba-mac.zip/">mGBA macOS/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/pj64-win.zip/">Project64 Windows/</a></td><td align="right">2025-09-10 21:36  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/desmume-win.zip/">DeSmuME Windows/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/icons/folder.gif" alt="[DIR]"></td><td><a href="emu/desmume-mac.zip/">DeSmuME macOS/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mesen-win.zip/">Mesen Windows/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/mesen-lin.zip/">Mesen Linux/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/mesen-mac1.zip/">Mesen macOS (Apple Silicon)/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/mesen-mac2.zip/">Mesen macOS (Intel)/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/bsnes-win.zip/">bsnes Windows/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/bsnes-lin.zip/">bsnes Linux/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/bsnes-mac.zip/">bsnes macOS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mgba-win.zip/">mGBA Windows/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mgba-lin1.zip/">mGBA Linux (64-bit)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mgba-lin2.zip/">mGBA Linux (ARM64)/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mgba-mac.zip/">mGBA macOS/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/pj64-win.zip/">Project64 Windows/</a></td><td align="right">2025-09-10 21:36  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/desmume-win.zip/">DeSmuME Windows/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/desmume-mac.zip/">DeSmuME macOS/</a></td><td align="right">2025-09-10 06:03  </td><td align="right">  - </td><td>&nbsp;</td></tr>
    <tr><th colspan="5"><hr></th></tr>
 </table>
 </body></html>
