--- a/emu.html
+++ b/emu.html
@@ -2,7 +2,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
  <head>
-  <title>Index of //Files/emu</title>
+  <title>Index of /Emu</title>
  </head>
  <body>
 <h1>Index of /Emu</h1>
