--- a/emu.html
+++ b/emu.html
@@ -7,13 +7,13 @@
  <body>
 <h1>Index of /Emu</h1>
   <table>
-   <tr><th valign="top"><img src="/Files/Files/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
+   <tr><th valign="top"><img src="/Files/icons/blank.gif" alt="[ICO]"></th><th><a href="?C=N;O=D">Name</a></th><th><a href="?C=M;O=A">Last modified</a></th><th><a href="?C=S;O=A">Size</a></th><th><a href="?C=D;O=A">Description</a></th></tr>
    <tr><th colspan="5"><hr></th></tr>
-<tr><td valign="top"><img src="/Files/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mesen-win.zip/">Mesen Windows/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/mesen-lin.zip/">Mesen Linux/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/mesen-mac1.zip/">Mesen macOS (Apple Silicon)/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/mesen-mac2.zip/">Mesen macOS (Intel)/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
-<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files//Files/emu/bsnes-win.zip/">bsnes Windows/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mesen-win.zip/">Mesen Windows/</a></td><td align="right">2025-09-10 02:04  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mesen-lin.zip/">Mesen Linux/</a></td><td align="right">2025-09-10 02:05  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mesen-mac1.zip/">Mesen macOS (Apple Silicon)/</a></td><td align="right">2025-09-10 02:06  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mesen-mac2.zip/">Mesen macOS (Intel)/</a></td><td align="right">2025-09-10 02:07  </td><td align="right">  - </td><td>&nbsp;</td></tr>
+<tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/bsnes-win.zip/">bsnes Windows/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
 <tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/bsnes-lin.zip/">bsnes Linux/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
 <tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/bsnes-mac.zip/">bsnes macOS/</a></td><td align="right">2025-09-10 18:46  </td><td align="right">  - </td><td>&nbsp;</td></tr>
 <tr><td valign="top"><img src="/Files/icons/folder.gif" alt="[DIR]"></td><td><a href="/Files/emu/mgba-win.zip/">mGBA Windows/</a></td><td align="right">2025-09-10 05:49  </td><td align="right">  - </td><td>&nbsp;</td></tr>
